--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,17 +30,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  
+  flutter_launcher_icons: ^0.9.0
   fluttertoast: ^8.0.2
   google_fonts: ^2.0.0
-  flutter_launcher_icons: ^0.9.0
-
-
+  lottie: ^1.0.0
 
 flutter_icons:
   image_path: "asset/Icon.png"
   android: true
-  
 
 dev_dependencies:
   flutter_lints: ^1.0.0
