--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,17 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.6.4
+  firebase_core: ^1.21.0
   flutter:
     sdk: flutter
   flutter_launcher_icons: ^0.9.0
   fluttertoast: ^8.0.2
+  font_awesome_flutter: ^10.1.0
   google_fonts: ^2.0.0
+  google_sign_in: ^5.4.1
   lottie: ^1.0.0
+  provider: ^6.0.3
 
 flutter_icons:
   image_path: "asset/Icon.png"
